3/12/24
Styling 2
==================================
- used bootstrap to resize game play area and center int
- added label to show what side is for which player
- added function to update player title color
    - round winner = green
    - round loser = red
- added function to update both player's title color for a tie -- yellow
- removed round result text - using color to show round winner


==================================
3/11/24
Styling 1
==================================
- move images to the center of their respective div
- center on page
    - title
    - scoreboard
    - "best of # of rounds" select
    - round result message
    - next round and next game buttons
- updated buttons to use bootstrap
- updated select and label to use bootstrap



==================================
3/11/24
Refactor
==================================
- remove lines to remove "selected" class name from each add event Listener
    - not needed anymore since a player can only make 1 selection per round
    - this functionality is now used int resetSelections() and is only needed when starting a new round or game
- remove lines to remove "rock", "paper", or "scissors" class name p1Choices/p2Choices in each add event Listener
    - not needed anymore since a player can only make 1 selection per round
    - this functionality is now used int resetSelections() and is only needed when starting a new round or game
- create functions to update p1 and p2 score
    - use functions to update score in each add event listener
- move all functions to a separate "functions.js" file


==================================
3/11/24
Add Best of # of Rounds Option
==================================
- add select element to choose a "best of # of rounds" option
    - value attribute of each option represents number of rounds needed to win
        - used to determine winner
            - best of 3 = need to win 2 rounds
            - best of 5 = need to win 3 rounds