@@ -16,7 +16,7 @@
             <h2><span id="p1Score">0</span>-<span id="p2Score">0</span></h2>
             <h2 id="winnerDisplay"></h2>
             
-            <div class="round-select form-floating offset-3">
+            <div class="round-select form-floating offset-3 mb-2">
                 <select class="form-select" name="playTo" id="playTo">
                     <option value="default">Choose Number of Rounds</option>
                     <option value="2">3</option>
@@ -62,8 +62,8 @@
         </div>
         
 
-        <button class="btn btn-outline-success" id="nextRound">Next Round</button>
-        <button class="btn btn-outline-secondary" id="resetGame">New Game</button>
+        <button class="btn btn-outline-success mt-1" id="nextRound">Next Round</button>
+        <button class="btn btn-outline-secondary mt-1" id="resetGame">New Game</button>
     </div>
     
 
